<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LinearActivity" >

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="196dp"
        android:layout_height="161dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="Pict Film"
        android:src="@drawable/img_potter" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:backgroundTint="@color/pink"
            android:text="@string/button1"
            app:cornerRadius="15dp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="15dp"
            android:layout_weight="1"
            android:backgroundTint="@color/pink"
            android:text="@string/button2"
            app:cornerRadius="15dp" />

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="15dp"
        android:backgroundTint="@color/blue"
        android:gravity="center"
        android:text="@string/match"
        app:cornerRadius="15dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|right"
        android:layout_marginTop="16dp"
        android:layout_marginRight="15dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/Right"
        app:cornerRadius="15dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|left"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/Left"
        app:cornerRadius="15dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:gravity="center">

        <Button
            android:id="@+id/leftButton"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/orange"
            android:gravity="center"
            android:text="@string/prev"
            android:textSize="40dp"
            app:cornerRadius="0dp" />

        <TextView
            android:id="@+id/selectFilmText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/select"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="20dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp" />

        <Button
            android:id="@+id/RightButton"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="15dp"
            android:backgroundTint="@color/orange"
            android:gravity="center"
            android:text="@string/next"
            android:textSize="40sp"
            app:cornerRadius="0dp" />

    </LinearLayout>

</LinearLayout>