<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TableActivity">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="146dp"
            android:layout_height="100dp"
            android:contentDescription="@string/name"
            app:srcCompat="@drawable/img" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/nm"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/usn"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:hint="@string/entername"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="5dp"
            android:textColor="@color/black" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/phone"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/userName"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:hint="@string/enterphone"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="5dp"
            android:textColor="@color/black" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp">

        <TextView
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/address"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/password"
            android:layout_column="1"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:hint="@string/entername"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:padding="5dp"
            android:layout_marginStart="10dp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/button"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_span="2"
            android:backgroundTint="@color/old"
            android:text="@string/submit"
            android:textSize="16sp" />

    </TableRow>

</TableLayout>
